#Changelog SDV-NG2-Generators

## 1.1.0 - 03/05/2017
* ADD: Ajout d'un générateur pour les compléments

## 1.0.0 - 20/04/2017
* BC: Changement de syntaxe des balises template vers ng-template pour angular4

## 0.6.0 - 13/04/2017
* BC: Changement de syntaxe des placeholders de modules routing
* ADD: Ajout d'un dossier de module d'exemple
* ADD: clef primaire modifiable

## 0.5.0 - 02/03/2017
* DEL: Retrait des fonctions dépréciés getNoCache()
* UPD: tslitnt changement des double quote

## 0.4.0 - 20/12/2016

* Compatibilité avec les API REST généré par [InfoYom](http://labs.infyom.com/laravelgenerator/)
* Compatibilité avec sdv-ng2-widgets
* Retrait des generateurs dépréciés (directive, page, pipe, service, widget)
( à la place il faut utiliser les fonctions native de "ng generate" )

## 0.3.0 - 24/11/2016

* Premiere version publique