@@ -1,0 +1,17 @@
+import { NgModule } from '@angular/core';
+
+// IMPORT INCLUS AUTOMATIQUEMENT
+
+// FIN IMPORT INCLUS AUTOMATIQUEMENT
+
+
+@NgModule({
+  imports: [
+
+// MODULE INCLUS AUTOMATIQUEMENT
+
+// FIN MODULE INCLUS AUTOMATIQUEMENT
+
+  ]
+})
+export class ModulesModule { }
