@@ -1,0 +1,14 @@
+import { Routes } from '@angular/router';
+
+// IMPORT INCLUS AUTOMATIQUEMENT
+
+// FIN IMPORT INCLUS AUTOMATIQUEMENT
+
+// ce fichier s'occupe de charger les routes de tous les modules (à mettre a jour avec la commande 'npm run gen route')
+export const modulesRoutes: Routes = [
+
+// ROUTE INCLUES AUTOMATIQUEMENT
+
+// FIN ROUTES INCLUES AUTOMATIQUEMENT
+
+];
