@@ -1,0 +1,41 @@
+// DEBUT-IMPORT-PLACEHOLDER
+
+// FIN-IMPORT-PLACEHOLDER
+
+export const widgets = {
+
+  // conf des widgets pour l'article
+  widgets_article_edition: [
+    // DEBUT-WIDGET-ARTICLE-PLACEHOLDER
+
+    // FIN-WIDGET-ARTICLE-PLACEHOLDER
+  ],
+
+  // conf des widgets pour popup complement
+  widgets_complement_popup: [
+    // DEBUT-WIDGET-COMP-POPUP-PLACEHOLDER
+
+    // FIN-WIDGET-COMP-POPUP-PLACEHOLDER
+  ],
+
+  // conf des widgets pour panel complement
+  widgets_complement_panel: [
+    // DEBUT-WIDGET-COMP-PANEL-PLACEHOLDER
+
+    // FIN-WIDGET-COMP-PANEL-PLACEHOLDER
+  ],
+
+  // conf des widgets topics
+  widgets_topic_edition: [
+    // DEBUT-WIDGET-TOPIC-PLACEHOLDER
+
+    // FIN-WIDGET-TOPIC-PLACEHOLDER
+  ],
+
+  // conf des widgets pour le all metas
+  widgets_all_meta: [
+    // DEBUT-WIDGET-ALL-META-PLACEHOLDER
+
+    // FIN-WIDGET-ALL-META-PLACEHOLDER
+  ]
+};
