@@ -1,5 +1,9 @@
 #Changelog SDV-NG2-Generators
 
+
+## WIP 
+* Générateur de route intégre les widgets de modules 
+
 ## 1.1.0 - 03/05/2017
 * ADD: Ajout d'un générateur pour les compléments
 
